fix a little text problem on mobile view

--- a/styles/section.css
+++ b/styles/section.css
@@ -9,6 +9,11 @@ body.home-page {
   position: relative;
 }
 
+html,
+body {
+  height: 100%;
+}
+
 .background-image {
   width: 100%;
   height: 100vh;
@@ -168,7 +173,7 @@ body.home-page {
 
 .gallery-main-box {
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   background-color: #f5f5f5;
   overflow: hidden;
   position: relative;
@@ -176,7 +181,7 @@ body.home-page {
 
 .gallery-selected-item {
   width: calc(100vw - 260px);
-  height: 100vh;
+  height: 100%;
   overflow: auto;
 }
 
@@ -237,7 +242,7 @@ body.home-page {
   }
 
   .gallery-selected-item-discription > h1 {
-    font-size: 28px;
+    font-size: 22px;
     line-height: 1.2;
     margin-bottom: 8px;
   }
@@ -246,6 +251,8 @@ body.home-page {
     font-size: 16px;
     line-height: 1.5;
     margin-top: 8px;
+    max-height: 100px;
+    overflow-y: auto;
   }
 }
 
